// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Validate cli app LICENSE 1`] = `Array []`;

exports[`Validate cli app bad config 1`] = `Array []`;

exports[`Validate cli app check LICENSE 1`] = `
Array [
  "[97mMIT License[39m",
  "[97m[39m",
  "[97mCopyright (c) 2017 Jason Dent[39m",
  "[97m[39m",
  "[97mPermission is hereby granted, free of charge, to any person obtaining a copy[39m",
  "[97mof this software and associated documentation files (the \\"Software\\"), to deal[39m",
  "[97min the Software without restriction, including without limitation the rights[39m",
  "[97mto use, copy, modify, merge, publish, distribute, sublicense, and/or sell[39m",
  "[97mcopies of the Software, and to permit persons to whom the Software is[39m",
  "[97mfurnished to do so, subject to the following conditions:[39m",
  "[97m[39m",
  "[97mThe above copyright notice and this permission notice shall be included in all[39m",
  "[97mcopies or substantial portions of the Software.[39m",
  "[97m[39m",
  "[97mTHE SOFTWARE IS PROVIDED \\"AS IS\\", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR[39m",
  "[97mIMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,[39m",
  "[97mFITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE[39m",
  "[97mAUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER[39m",
  "[97mLIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,[39m",
  "[97mOUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE[39m",
  "[97mSOFTWARE.[39m",
  "[97m[39m",
]
`;

exports[`Validate cli app check help 1`] = `
Array [
  "Usage: cspell check [options] <files...>",
  "",
  "Spell check file(s) and display the result. The full file is displayed in color.",
  "",
  "Options:",
  "  -c, --config <cspell.json>  Configuration file to use.  By default cspell",
  "                              looks for cspell.json in the current directory.",
  "  --no-color                  Turn off color.",
  "  --color                     Force color",
  "  -h, --help                  display help for command",
  "",
]
`;

exports[`Validate cli app check missing 1`] = `Array []`;

exports[`Validate cli app check with spelling errors 1`] = `
Array [
  "[97m                              [[39m[31mNEDERLANDS[39m[97m][39m",
  "[97m        U [39m[31mwordt[39m[97m [39m[31mvriendelijk[39m[97m [39m[31mverzocht[39m[97m om dit [39m[31mbestand[39m[97m (\\"README_nl_NL.txt\\")[39m",
  "[97m      te [39m[31mlezen[39m[97m en mee te [39m[31mleveren[39m[97m bij [39m[31miedere[39m[97m [39m[31mkopie[39m[97m van dit [39m[31mtaalhulpbestand[39m[97m.[39m",
  "[97m[39m",
  "[97m1. [39m[31mNaam[39m[97m: [39m[31mNederlandstalige[39m[97m [39m[31mwoordenlijst[39m[97m [39m[31mvoor[39m[97m [39m[31mspellingcontrole[39m[97m - OpenTaal[39m",
  "[97m2. [39m[31mVersie[39m[97m [39m[31mwoordenlijst[39m[97m: 2.00G; [39m[31mversie[39m[97m [39m[31mspellingcontrole[39m[97m: 2.00G.[39m",
  "[97m3. [39m[31mVereisten[39m[97m: Hunspell 1.2.8 en [39m[31mhoger[39m[97m[39m",
  "[97m4. [39m[31mKeurmerk[39m[97m Spelling [39m[31mNederlandse[39m[97m [39m[31mTaalunie[39m[97m: De [39m[31mlijst[39m[97m met [39m[31mbasiswoorden[39m[97m van[39m",
  "[97m   OpenTaal [39m[31mdraagt[39m[97m het [39m[31mkeurmerk[39m[97m van de [39m[31mNederlandse[39m[97m [39m[31mTaalunie[39m[97m. [39m[31mVoor[39m[97m [39m[31mmeer[39m[97m[39m",
  "[97m   [39m[31minformatie[39m[97m zie: [39m[90mhttp://www.taalunieversum.org/keurmerk[39m[97m[39m",
  "[97m5. [39m[31mAuteursrechten[39m[97m: © 2006-2010 OpenTaal, © 2001-2005 Simon [39m[31mBrouwer[39m[97m e.a.,[39m",
  "[97m   © 1996 [39m[31mNederlandstalige[39m[97m Tex [39m[31mGebruikersgroep[39m[97m[39m",
  "[97m6. [39m[31mLicenties[39m[97m: OpenTaal [39m[31mheeft[39m[97m als [39m[31mdoel[39m[97m om [39m[31mvrij[39m[97m [39m[31mbeschikbare[39m[97m [39m[31mNederlandstalige[39m[97m[39m",
  "[97m   [39m[31mtaalhulpbestanden[39m[97m te [39m[31montwikkelen[39m[97m en te [39m[31mverspreiden[39m[97m. Om breed (her)[39m[31mgebruik[39m[97m[39m",
  "[97m   [39m[31mmogelijk[39m[97m te [39m[31mmaken[39m[97m [39m[31mzijn[39m[97m de [39m[31mtaalhulpbestanden[39m[97m gratis [39m[31mbeschikbaar[39m[97m [39m[31monder[39m[97m de twee[39m",
  "[97m   [39m[31monderstaande[39m[97m, [39m[31mliberale[39m[97m [39m[31mlicenties[39m[97m [39m[31mnaar[39m[97m [39m[31mkeuze[39m[97m van de [39m[31mgebruiker[39m[97m. U [39m[31mwordt[39m[97m ten[39m",
  "[97m   [39m[31mzeerste[39m[97m [39m[31maangeraden[39m[97m om [39m[31mvoorafgaand[39m[97m aan het [39m[31mgebruik[39m[97m [39m[31mkennis[39m[97m te [39m[31mnemen[39m[97m van de[39m",
  "[97m   [39m[31mtoepasselijke[39m[97m [39m[31mlicentie[39m[97m.[39m",
  "[97m   A. BSD ([39m[31mherziene[39m[97m [39m[31mversie[39m[97m):[39m",
  "[97m   - [39m[31mVolledige[39m[97m [39m[31mlicentie[39m[97m: [39m[90mhttp://creativecommons.org/licenses/BSD/legalcode[39m[97m[39m",
  "[97m   - [39m[31mSamenvatting[39m[97m: [39m[90mhttp://creativecommons.org/licenses/BSD/deed.nl[39m[97m[39m",
  "[97m   B. Creative Commons, [39m[31mNaamsvermelding[39m[97m 3.0 ([39m[31munported[39m[97m)[39m",
  "[97m   - [39m[31mVolledige[39m[97m [39m[31mlicentie[39m[97m: [39m[90mhttp://creativecommons.org/licenses/by/3.0/legalcode[39m[97m[39m",
  "[97m   - [39m[31mSamenvatting[39m[97m: [39m[90mhttp://creativecommons.org/licenses/by/3.0/deed.nl[39m[97m[39m",
  "[97m7. [39m[31mSteun[39m[97m OpenTaal: OpenTaal is een [39m[31mvrijwilligersproject[39m[97m [39m[31mzonder[39m[97m [39m[31mwinstoogmerk[39m[97m.[39m",
  "[97m   Door uw ([39m[31mkleine[39m[97m) [39m[31mfinanciële[39m[97m [39m[31msteun[39m[97m kan OpenTaal [39m[31mmeer[39m[97m [39m[31mactiviteiten[39m[97m [39m[31montplooien[39m[97m[39m",
  "[97m   en het project [39m[31mprofessionaliseren[39m[97m. Uw [39m[31mdonatie[39m[97m is van harte [39m[31mwelkom[39m[97m op[39m",
  "[97m   [39m[31mrekeningnummer[39m[97m 15.62.32.782 t.n.v. [39m[31mStichting[39m[97m OpenTaal. Uw [39m[31mgiften[39m[97m [39m[31mzijn[39m[97m[39m",
  "[97m   [39m[31maftrekbaar[39m[97m van de [39m[31mbelasting[39m[97m. [39m[31mStichting[39m[97m OpenTaal is [39m[31mnamelijk[39m[97m door de[39m",
  "[97m   [39m[31mBelastingdienst[39m[97m [39m[31merkend[39m[97m als [39m[31mANBI[39m[97m, [39m[31moftewel[39m[97m \\"[39m[31mAlgemeen[39m[97m Nut [39m[31mBeogende[39m[97m [39m[31mInstelling[39m[97m\\".[39m",
  "[97m   Zie: [39m[90mhttp://belastingdienst.nl/anbi/[39m[97m[39m",
  "[97m8. [39m[31mMeedoen[39m[97m: [39m[31mIedereen[39m[97m is [39m[31mwelkom[39m[97m om mee te [39m[31mdoen[39m[97m. Meld [39m[31mfouten[39m[97m, [39m[31mdiscussieer[39m[97m mee op[39m",
  "[97m   de [39m[31mmailinglijst[39m[97m of [39m[31mdraai[39m[97m Harvester. Door bij te [39m[31mdragen[39m[97m aan het project [39m[31mstemt[39m[97m[39m",
  "[97m   u [39m[31mermee[39m[97m in dat uw [39m[31mbijdrage[39m[97m aan het [39m[31mdesbetreffende[39m[97m [39m[31mtaalhulpbestand[39m[97m [39m[31mbeschikbaar[39m[97m[39m",
  "[97m   [39m[31mkomt[39m[97m [39m[31monder[39m[97m [39m[31mvrije[39m[97m en/of [39m[31mopensource[39m[97m [39m[31mlicenties[39m[97m. [39m[31mIndien[39m[97m u dat [39m[31mwenst[39m[97m, dan kan uw[39m",
  "[97m   [39m[31mnaam[39m[97m op de website [39m[31mgenoemd[39m[97m [39m[31mworden[39m[97m. We [39m[31montvangen[39m[97m uw [39m[31mschriftelijk[39m[97m [39m[31mverzoek[39m[97m[39m",
  "[97m   [39m[31mdaarvoor[39m[97m [39m[31mgraag[39m[97m.[39m",
  "[97m9. [39m[31mRechten[39m[97m van [39m[31mderden[39m[97m: OpenTaal [39m[31mrespecteert[39m[97m de [39m[31mrechten[39m[97m van [39m[31mderden[39m[97m en[39m",
  "[97m   wil haar [39m[31mgegevens[39m[97m [39m[31mvrij[39m[97m [39m[31mbeschikbaar[39m[97m [39m[31mhouden[39m[97m. [39m[31mVoor[39m[97m [39m[31mbijdragen[39m[97m aan het project mag[39m",
  "[97m   u [39m[31mdaarom[39m[97m [39m[31mniet[39m[97m [39m[31mzonder[39m[97m [39m[31mtoestemming[39m[97m [39m[31mgebruikmaken[39m[97m van [39m[31mbeschermde[39m[97m [39m[31mnaslagwerken[39m[97m,[39m",
  "[97m   [39m[31mzoals[39m[97m [39m[31mwoordenboeken[39m[97m. Wel is het [39m[31mtoegestaan[39m[97m om [39m[31mgebruik[39m[97m te [39m[31mmaken[39m[97m van de[39m",
  "[97m   [39m[31mmaterialen[39m[97m van de [39m[31mNederlandse[39m[97m [39m[31mTaalunie[39m[97m, [39m[31mzoals[39m[97m de [39m[31mleidraad[39m[97m en de [39m[31mwoordenlijst[39m[97m.[39m",
  "[97m   [39m[31mIndien[39m[97m u van [39m[31mmening[39m[97m bent dat OpenTaal [39m[31minbreuk[39m[97m [39m[31mmaakt[39m[97m op uw [39m[31mrechten[39m[97m, dan[39m",
  "[97m   [39m[31mverzoeken[39m[97m we u [39m[31mhierover[39m[97m zo [39m[31mspoedig[39m[97m [39m[31mmogelijk[39m[97m [39m[31mschriftelijk[39m[97m contact met ons op[39m",
  "[97m   te [39m[31mnemen[39m[97m.[39m",
  "[97m10.Contact: [39m[31mStichting[39m[97m OpenTaal, [39m[90mhttp://www.opentaal.org,[39m[97m [39m[90mbestuur@opentaal.org[39m[97m[39m",
  "[97m_________________________________________________________________________________[39m",
  "[97m                                [ENGLISH][39m",
  "[97m        You are kindly requested to read this file \\"README_nl_NL.txt\\"[39m",
  "[97m     and to keep a copy of it with every copy you make of this language file.[39m",
  "[97m[39m",
  "[97m1. Name: Dutch word list for spell checking - OpenTaal[39m",
  "[97m2. Version of words list: 2.00G; version spell checking: 2.00G[39m",
  "[97m3. Requirements: Hunspell 1.2.8 and higher[39m",
  "[97m4. Spelling Seal of Dutch Language Union: The OpenTaal list of lemmas has[39m",
  "[97m   received the Spelling Seal of Approval from the Dutch Language Union, the[39m",
  "[97m   formal Dutch language institute. For more information please see:[39m",
  "[97m   [39m[90mhttp://www.taalunieversum.org/keurmerk/[39m[97m[39m",
  "[97m5. Copyrights: © 2006-2010 OpenTaal, © 2001-2005 Simon [39m[31mBrouwer[39m[97m e.a.,[39m",
  "[97m   © 1996 [39m[31mNederlandstalige[39m[97m Tex [39m[31mGebruikersgroep[39m[97m[39m",
  "[97m6. Licenses: OpenTaal aims to create and publish free Dutch language files. To[39m",
  "[97m   enable the broadest (re)use the language files are freely available under the[39m",
  "[97m   below, liberal licenses at the discretion of the user. We strongly recommend[39m",
  "[97m   to read the applicable license before usage.[39m",
  "[97m   A. BSD (revised version):[39m",
  "[97m   - Full license text: [39m[90mhttp://creativecommons.org/licenses/BSD/legalcode[39m[97m[39m",
  "[97m   - Summary: [39m[90mhttp://creativecommons.org/licenses/BSD/deed.en[39m[97m[39m",
  "[97m   B. Creative Commons, Attribution 3.0 ([39m[31munported[39m[97m)[39m",
  "[97m   - Full license text: [39m[90mhttp://creativecommons.org/licenses/by/3.0/legalcode[39m[97m[39m",
  "[97m   - Summary: [39m[90mhttp://creativecommons.org/licenses/by/3.0/deed.en[39m[97m[39m",
  "[97m7. Support OpenTaal: OpenTaal is a non-profit volunteer project. With your[39m",
  "[97m   (small) financial support OpenTaal will further expand its activities and[39m",
  "[97m   enhance its professionalism. Your donation is welcome at[39m",
  "[97m   account number: 15.62.32.782, BIC: [39m[31mRABONL[39m[97m2U, [39m[31mIBAN[39m[97m: NL88[39m[31mRABO[39m[97m0156232782 of[39m",
  "[97m   [39m[31mStichting[39m[97m OpenTaal / OpenTaal Foundation. In the Netherlands your donations[39m",
  "[97m   are tax deductible. OpenTaal Foundation has been designated by the Dutch Tax[39m",
  "[97m   Administration as an Institution for General Benefit ([39m[31malgemeen[39m[97m nut [39m[31mbeogende[39m[97m[39m",
  "[97m   [39m[31minstelling[39m[97m or [39m[31mANBI[39m[97m). Please see: [39m[90mhttp://belastingdienst.nl/anbi/[39m[97m[39m",
  "[97m8. Participate: Everyone is welcome to participate. Please give feedback,[39m",
  "[97m   discuss on the mailing list or run Harvester. By contributing to the project[39m",
  "[97m   you agree that your contribution is available under free or/open source[39m",
  "[97m   licenses. In case you wish, your name will be mentioned on the website. Your[39m",
  "[97m   are invited to send us your written request.[39m",
  "[97m9. Rights of third parties: OpenTaal respects the rights of third parties and[39m",
  "[97m   aims to keep its data freely available. Therefore you may no use protected[39m",
  "[97m   sources of third parties, i.e. dictionaries, without their permission when[39m",
  "[97m   you contribute to the project. It is permitted to use the materials of the[39m",
  "[97m   Dutch Language Union, i.e. their spelling instruction and word list. In case[39m",
  "[97m   you believe OpenTaal is violating your rights, we ask you to send us a[39m",
  "[97m   written notice as soon as possible.[39m",
  "[97m10.Contact: OpenTaal Foundation, [39m[90mhttp://www.opentaal.org,[39m[97m [39m[90mbestuur@opentaal.org[39m[97m[39m",
  "[97m[39m",
  "[97mcspell:language en,nl[39m",
  "[97m[39m",
]
`;

exports[`Validate cli app cspell-bad.json 1`] = `Array []`;

exports[`Validate cli app cspell-import-missing.json 1`] = `Array []`;

exports[`Validate cli app current_file --verbose 1`] = `Array []`;

exports[`Validate cli app current_file 1`] = `Array []`;

exports[`Validate cli app current_file languageId 1`] = `Array []`;

exports[`Validate cli app link 1`] = `Array []`;

exports[`Validate cli app link add 1`] = `Array []`;

exports[`Validate cli app link list 1`] = `Array []`;

exports[`Validate cli app link ls 1`] = `Array []`;

exports[`Validate cli app link remove 1`] = `Array []`;

exports[`Validate cli app must find force no error 1`] = `Array []`;

exports[`Validate cli app must find with error 1`] = `Array []`;

exports[`Validate cli app no-args 1`] = `
Array [
  "Usage: cspell lint [options] [files...]",
  "",
  "Check spelling",
  "",
  "Options:",
  "  -c, --config <cspell.json>  Configuration file to use.  By default cspell",
  "                              looks for cspell.json in the current directory.",
  "  -v, --verbose               display more information about the files being",
  "                              checked and the configuration",
  "  --locale <local>            Set language locales. i.e. \\"en,fr\\" for English",
  "                              and French, or \\"en-GB\\" for British English.",
  "  --language-id <language>    Force programming language for unknown",
  "                              extensions. i.e. \\"php\\" or \\"scala\\"",
  "  --languageId <language>     Force programming language for unknown",
  "                              extensions. i.e. \\"php\\" or \\"scala\\"",
  "  --wordsOnly                 Only output the words not found in the",
  "                              dictionaries.",
  "  -u, --unique                Only output the first instance of a word not",
  "                              found in the dictionaries.",
  "  --debug                     Output information useful for debugging",
  "                              cspell.json files.",
  "  -e, --exclude <glob>        Exclude files matching the glob pattern. This",
  "                              option can be used multiple times to add multiple",
  "                              globs.",
  "  --no-issues                 Do not show the spelling errors.",
  "  --no-progress               Turn off progress messages",
  "  --no-summary                Turn off summary message in console",
  "  -s, --silent                Silent mode, suppress error messages",
  "  -r, --root <root folder>    Root directory, defaults to current directory.",
  "  --relative                  Issues are displayed relative to root.",
  "  --show-context              Show the surrounding text around an issue.",
  "  --show-suggestions          Show spelling suggestions.",
  "  --must-find-files           Error if no files are found (default: true)",
  "  --no-must-find-files        Do not error is no files are found",
  "  --legacy                    Legacy output",
  "  --local <local>             Deprecated -- Use: --locale",
  "  -h, --help                  display help for command",
  "",
  "",
  "Examples:",
  "    cspell \\"*.js\\"                   Check all .js files in the current directory",
  "    cspell \\"**/*.js\\"                Check all .js files from the current directory",
  "    cspell \\"src/**/*.js\\"            Only check .js under src",
  "    cspell \\"**/*.txt\\" \\"**/*.js\\"     Check both .js and .txt files.",
  "    cspell \\"**/*.{txt,js,md}\\"       Check .txt, .js, and .md files.",
  "    cat LICENSE | cspell stdin      Check stdin",
  "",
  "",
]
`;

exports[`Validate cli app not found error by default 1`] = `Array []`;

exports[`Validate cli app samples/Dutch.txt 1`] = `Array []`;

exports[`Validate cli app trace hello 1`] = `Array []`;

exports[`Validate cli app trace help 1`] = `
Array [
  "Usage: cspell trace [options] <words...>",
  "",
  "Trace words",
  "",
  "Options:",
  "  -c, --config <cspell.json>  Configuration file to use.  By default cspell",
  "                              looks for cspell.json in the current directory.",
  "  --local <local>             Set language locals. i.e. \\"en,fr\\" for English and",
  "                              French, or \\"en-GB\\" for British English.",
  "  --languageId <language>     Force programming language for unknown",
  "                              extensions. i.e. \\"php\\" or \\"scala\\"",
  "  --no-color                  Turn off color.",
  "  --color                     Force color",
  "  -h, --help                  display help for command",
  "",
]
`;

exports[`Validate cli app trace missing dictionary 1`] = `Array []`;

exports[`Validate cli app trace not-in-any-dictionary 1`] = `Array []`;

exports[`Validate cli app with spelling errors --debug Dutch.txt 1`] = `Array []`;

exports[`Validate cli app with spelling errors --silent Dutch.txt 1`] = `Array []`;

exports[`Validate cli app with spelling errors Dutch.txt 1`] = `Array []`;
